@@ -85,5 +85,4 @@ directory = lib/Dist/Zilla/MintingProfile
 file      = lib/Dist/Zilla/Plugin/Author/Plicease/Init.pm
 
 [Author::Plicease::Upload]
-[Author::Plicease::InstallerPerlVersion]
 [InsertExample]
