@@ -25,6 +25,12 @@ otherwise pure perl modules will optionally use them.
 This plugin also enforces that releases are not done on
 Perl 5.8 or C<MSWin32>.
 
+This plugin also adds a preface to your C<Makefile.PL> or C<Build.PL> to
+test the Perl version in a way that will not throw an exception,
+instead calling exit, so that they will not be reported on
+cpantesters as failures.  This plugin should be the last
+L<Dist::Zilla::Role::InstallTool> plugin in your C<dist.ini>.
+
 =over 4
 
 =item Moo
@@ -79,6 +85,7 @@ Recommended if Mojolicious or AnyEvent modules are required.
 
 with 'Dist::Zilla::Role::BeforeRelease';
 with 'Dist::Zilla::Role::PrereqSource';
+with 'Dist::Zilla::Role::InstallTool';
 
 my %upgrades = qw(
   Moo                                   2.0
@@ -146,6 +153,31 @@ sub before_release
   my $self = shift;
   $self->log_fatal('release requires Perl 5.10 or better') if $] < 5.010000;
   $self->log_fatal('don\'t release via MSWin32')           if $^O eq 'MSWin32';
+}
+
+sub setup_installer
+{
+  my($self) = @_;
+  
+  my $prereqs = $self->zilla->prereqs->as_string_hash;
+  
+  my $perl_version = $prereqs->{runtime}->{requires}->{perl};
+  
+  $self->log("perl version required = $perl_version");
+  
+  foreach my $file (grep { $_->name =~ /^(Makefile\.PL|Build\.PL)$/ } @{ $self->zilla->files })
+  {
+    my $content = $file->content;
+    $content = join "\n", 
+      "BEGIN {",
+      "  unless(eval q{ use $perl_version; 1}) {",
+      "    print \"Perl $perl_version or better required\\n\";",
+      "    exit;",
+      "  }",
+      "}",
+      $content;
+    $file->content($content);
+  }
 }
 
 __PACKAGE__->meta->make_immutable;
