@@ -1,7 +1,7 @@
 version = 0.01
 
 [@Author::Plicease]
-:version = 1.70
+:version = 1.72
 
 [ReadmeAnyFromPod]
 type     = text
